using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace CatSimulator
{
    public static class AnimationTrigger
    {
        public static string MoodLevel = "Mood Level";
        public static int MoodLevelAngry = 1;
        public static int MoodLevelOk = 2;
        public static int MoodLevelHappy = 3;
        public static string KickAction = "Kick Action";
        public static string PetAction = "Pet Action";
        public static string FeedAction = "Feed Action";
        public static string PlayAction = "Play Action";
        public static string GoToIdle = "Go To Idle";
    }
}
